--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.7.1"
   }
 }
