--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.8.1",
     "axios": "^1.6.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -18,6 +19,6 @@
     "nodemon": "^3.0.2"
   },
   "devDependencies": {
-    "prisma": "^5.7.1"
+    "prisma": "^5.8.1"
   }
 }
